Revision history for Test::PDL

{{$NEXT}}

 - include version of List::MoreUtils and File::Map in test output in order to
   track down unexpected test failures on some platforms (Edward Baudrez)

0.06      2012-12-07

 - fixed unexpected test failure: references can stringify to negative numbers!
   (Edward Baudrez)
 - diagnose a possible problem in the arguments:
	is_pdl hist( pdl(2,3,4,5) ), pdl(1,1,1,1);
   hist() returns two piddles in list context, leaving the expected value
   pdl(1,1,1,1) in the third place as the test name. As this is most likely not
   what the user wanted, an error is raised when this is detected (Edward
   Baudrez)

0.05      2012-11-20

 - the first non-trial release; nothing has actually changed in the
   distribution except the version number (Edward Baudrez)

0.04      2012-10-11

 - added a function eq_pdl() to compare two piddles, without performing an
   actual test. If you've been wanting to compare two piddles outside of a test
   suite, now you can (Edward Baudrez)
 - added a function eq_pdl_diag() that, in addition to comparing two piddles,
   also returns the reason for failure, if any. It was written to support deep
   comparisons with Test::Deep, but you may find other uses for it, too (Edward
   Baudrez)
 - added a function test_pdl() which hides a constructor call for an object
   that can make 'special comparisons': those are useful when comparing piddles
   inside data structures with Test::Deep. E.g.,
      my $expected = {
         data => test_pdl( -3,9.99,2 ),
      };
      cmp_deeply function_returning_hashref(), $expected;
   See the documentation of test_pdl() for more details (Edward Baudrez)

0.03      2012-09-10

 - minor bugfixes related to distribution building and hosting on GitHub. No
   functionality added or changed (Edward Baudrez)
 - fix the POD documentation to work with the PDL docs database scraper (David
   Mertens)
 - allow setting module options at use time: