@@ -2,6 +2,8 @@ Revision history for Test::PDL
 
 {{$NEXT}}
 
+ - try to work around spurious warning messages emitted in some tests (Edward
+   Baudrez)
  - include version of List::MoreUtils and File::Map in test output in order to
    track down unexpected test failures on some platforms (Edward Baudrez)
 
